Bug 358776 - per-project tab colors not updated on palette change
Summary: per-project tab colors not updated on palette change
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: shell (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: 5.0.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 364050 373765 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-30 16:12 UTC by Milian Wolff
Modified: 2017-03-06 16:48 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Milian Wolff 2016-01-30 16:12:55 UTC
See also https://bugs.kde.org/show_bug.cgi?id=358526

When the global system palette is changed from dark to bright or vice versa, the text color of the per-project tab is not updated, leading to unreadable white-on-white or dark-on-dark text of tabs

Reproducible: Always

Steps to Reproduce:
1. open tab with per-project color enabled
2. change system style from breeze to breeze-dark or vice versa

Actual Results:  
tab text is unreadable

Expected Results:  
colors are recalculated on the ApplicationPaletteChange event and text stays readable.
Comment 1 Milian Wolff 2016-02-21 22:28:36 UTC
somehow the normal PaletteChange event in the mainwindow is not sufficient to fix this issue, we need to investigate. Maybe ApplicationPaletteChange is required via an event filter on the qApp? Note that not even a queued update made a visible difference... Potentially, we need to investigate KColorScheme to figure out when we can update it.
Comment 2 Kevin Funk 2016-03-08 22:29:14 UTC
I would not consider this a release blocker though -> dropping the keyword.
Comment 3 Kevin Funk 2016-06-07 13:38:36 UTC
*** Bug 364050 has been marked as a duplicate of this bug. ***
Comment 4 Kevin Funk 2016-08-04 08:35:35 UTC
Git commit 5d767e396915a523389f9e8842955c992d5b716e by Kevin Funk, on behalf of Alexander Zhigalin.
Committed on 04/08/2016 at 08:34.
Pushed by kfunk into branch '5.0'.

Fix wrong tab colors

KColorScheme was somehow ignoring the palette which should be assigned by the constructor and ends up using the system one.
As we don't really need the KColorScheme functions I have just removed it.

REVIEW: 128593
FIXED-IN: 5.0

M  +1    -3    shell/mainwindow.cpp
M  +1    -2    util/widgetcolorizer.cpp

http://commits.kde.org/kdevplatform/5d767e396915a523389f9e8842955c992d5b716e
Comment 5 Janek Bevendorff 2016-10-17 22:49:16 UTC
Not sure if it's worth reopening for this, but the file tabs still need a restart of KDevelop after changing the color scheme.
Comment 6 Francis Herne 2017-02-20 12:44:45 UTC
Git commit 42503e8640ae449021782326d883db6aec325f2a by Francis Herne.
Committed on 20/02/2017 at 12:40.
Pushed by flherne into branch '5.1'.

Update tab colors when the palette changes

Tab colors weren't updated when the palette changed (either the system
 palette or with the Settings -> Color Theme menu).

M  +7    -0    shell/mainwindow.cpp
M  +1    -0    shell/mainwindow.h

https://commits.kde.org/kdevplatform/42503e8640ae449021782326d883db6aec325f2a
Comment 7 Francis Herne 2017-03-06 16:48:06 UTC
*** Bug 373765 has been marked as a duplicate of this bug. ***