Update tab colors when the palette changes

Tab colors weren't updated when the palette changed (either the system
 palette or with the Settings -> Color Theme menu).

BUG: 358776